--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+  <span>{{ title }}</span>
+</md-toolbar>
+<a [routerLink]="['/login']">Login</a>
+<a [routerLink]="['/board']">Board</a>
+<router-outlet></router-outlet>
