--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/core/theming/prebuilt/pink-bluegrey.css';
+@import '~@angular/material/core/theming/prebuilt/indigo-pink.css';
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
+
+html, body {
+    background-color: #e8e3e2;
+    height: 100%;
+}
+
+.w100 {
+    width: 100%;
+}
