--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <header fxFlex="none" fxFlexFill>
         <md-toolbar id="title-bar" color="primary">
             <span>{{ title }}</span>
-            <a [routerLink]="['/login']">Login</a>
+            <cmm-user-login-link></cmm-user-login-link>
         </md-toolbar>
     </header>
 
