--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,6 @@
         <md-input-container class="w100">
             <input mdInput type="text" placeholder="Discuss Website" formControlName="url">
         </md-input-container>
-        <button type="submit" md-raised-button [disabled]="!goToBoardForm.valid">Go!</button>
+        <button type="submit" md-raised-button color="primary" [disabled]="!goToBoardForm.valid">Go!</button>
     </form>
 </div>
