avoid explicit board creation

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
 
 html, body {
-    background-color: #e8e3e2;
+    background-color: white;
     height: 100%;
 }
 
