--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,4 +1,4 @@
-main, header, footer {
+main, header, footer, nav {
     max-width: 800px;
     margin: auto;
 }
@@ -10,7 +10,6 @@ main, footer {
 main {
 
 }
-
 
 #title-bar {
     background-color: transparent;
