--- a/src/app/board/thread-detail/thread-detail.component.html
+++ b/src/app/board/thread-detail/thread-detail.component.html
@@ -1,3 +1,3 @@
-<p>
-  thread-detail works!
-</p>
+<a class="btn btn-secondary" [routerLink]="['/board']" queryParamsHandling="preserve" role="button">Thread List</a>
+<hr>
+<p>{{ thread?.title }}</p>
