--- a/src/app/core/user-login-link/user-login-link.component.html
+++ b/src/app/core/user-login-link/user-login-link.component.html
@@ -1,9 +1,10 @@
 <ng-container [ngSwitch]="isAuthenticated()">
-    <a *ngSwitchCase="false" [routerLink]="['/login']">Login</a>
+    <a class="btn btn-link" *ngSwitchCase="false" [routerLink]="['/login']">
+        Login
+    </a>
     <span *ngSwitchCase="true">
-        <a [routerLink]="['/user']">User</a>
-        <button md-button (click)="logout()">Logout</button>
+        <a class="btn btn-link" [routerLink]="['/user']"><i class="material-icons">person</i></a>
+        <button class="btn btn-link" (click)="logout()">Logout</button>
     </span>
-
 </ng-container>
 
