--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,18 @@
-<p>
-  login works!
-</p>
-<button md-raised-button (click)="socialLogin('google')">Login with Google</button>
-<button md-raised-button (click)="socialLogin('facebook')">Login with Facebook</button>
-<button md-raised-button (click)="socialLogin('twitter')">Login with Twitter</button>
+
+<button (click)="socialLogin('google')">Login with Google</button><br>
+<button (click)="socialLogin('facebook')">Login with Facebook</button><br>
+<button (click)="socialLogin('twitter')">Login with Twitter</button><br>
+
+OR<br>
+
+<form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+    <div class="form-group">
+        <label for="loginUsername">Username</label>
+        <input id="loginUsername" type="text" placeholder="Username" formControlName="username">
+    </div>
+    <div class="form-group">
+        <label for="loginPassword">Password</label>
+        <input id="loginPassword" type="password" placeholder="Password" formControlName="password">
+    </div>
+    <button type="submit" [disabled]="!loginForm.valid">Login</button>
+</form>
