--- a/src/app/board/thread-list/thread-list.component.html
+++ b/src/app/board/thread-list/thread-list.component.html
@@ -7,7 +7,7 @@
         <col width="150px">
         <col width="150px">
     </colgroup>
-    <thead class="thead-inverse">
+    <thead class="thead-default">
         <tr>
             <th>Title</th>
             <th>Created by</th>
