--- a/src/app/board/post/post.component.less
+++ b/src/app/board/post/post.component.less
@@ -1,11 +1,29 @@
 .post {
-    border: 1px solid rgba(0,0,0,.1);
 
-    .post-header {
-        border-bottom: 1px solid rgba(0,0,0,.1);
+
+    .post-sidebar {
+
     }
 
     .post-content {
 
+    }
+
+    .post-extend {
+        position: relative;
+        &::before {
+            content: ' ';
+            position: absolute;
+            width: 300px;
+            height: 1px;
+            background-color: #ccc;
+            top: 20px;
+            left: 50%;
+            margin-left: -150px;
+        }
+        button {
+            position: relative;
+            z-index: 2;
+        }
     }
 }
