--- a/src/app/board/thread-list/thread-list.component.html
+++ b/src/app/board/thread-list/thread-list.component.html
@@ -15,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let thread of threadList?.results" [routerLink]="['/board', thread.id]" queryParamsHandling="preserve">
+        <tr *ngFor="let thread of threadList?.results" [routerLink]="['/board', thread.id]" [queryParams]="{ url: board.url }">
             <td>{{ thread.title }}</td>
             <td>{{ thread.creator.name }}</td>
             <td>{{ thread.created | date: 'dd/MM/yyyy HH:mm' }}</td>
