--- a/src/app/shared/user-label/user-label.component.html
+++ b/src/app/shared/user-label/user-label.component.html
@@ -1,3 +1,4 @@
-<div class="user-label">
+<div class="user-label p-3 bg-faded">
     <a [routerLink]="['/user']">{{ user.name }}</a>
+    <small>{{ date | date: 'dd/MM/yyyy HH:mm' }}</small>
 </div>
