--- a/src/app/board/thread-detail/thread-detail.component.html
+++ b/src/app/board/thread-detail/thread-detail.component.html
@@ -1,55 +1,13 @@
-<a class="btn btn-secondary" [routerLink]="['/board']" queryParamsHandling="preserve" role="button">Thread List</a>
-<hr>
+
 
 <cmm-post [post]="post"
           [title]="thread?.title"
-          (replyOpened)="replyOpened($event)"
-          (replyClosed)="replyClosed($event)"
-          (postCreated)="postCreated($event)">
+          [externalChildHandling]="true"
+          (create)="childPostCreated($event)">
 </cmm-post>
 <hr>
-<form class="form-inline" (ngSubmit)="submitOrderForm()" [formGroup]="orderForm">
-    <div class="form-group">
-        <label for="postOrderOptions">Ordering</label>
-        <select class="form-control" id="postOrderOptions" formControlName="order">
-            <option *ngFor="let orderOption of orderOptions" [value]="orderOption.param">{{orderOption.label}}</option>
-        </select>
-    </div>
-</form>
-<hr>
-<div *ngFor="let post of postList?.results">
-    <cmm-post [post]="post"
-              [openable]="true"
-              (opened)="postOpened($event)"
-              (replyOpened)="replyOpened($event)"
-              (replyClosed)="replyClosed($event)"
-              (postCreated)="postCreated($event)">
-    </cmm-post>
-    <div class="post-children" *ngIf="post.showChildren && post.numberOfChildren > 0">
-        <cmm-post
-            *ngFor="let childPost of post.children"
-            [post]="childPost"
-            (postCreated)="postCreated($event)">
-        </cmm-post>
-    </div>
-    <hr>
-</div>
-<nav aria-label="post list navigation">
-    <ul class="pagination">
-        <li class="page-item" [class.disabled]="postList?.page <= 1">
-            <a class="page-link" [routerLink]="['/board', thread.id]" [queryParams]="{ url: board.url, page: postList?.page - 1 }" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-            </a>
-        </li>
-        <li class="page-item" *ngFor="let i of postList?.pages" [class.active]="i === postList?.page">
-            <a class="page-link" [routerLink]="['/board', thread.id]" [queryParams]="{ url: board.url, page: i }">{{ i }}</a>
-        </li>
-        <li class="page-item" [class.disabled]="postList?.page >= postList?.numberOfPages">
-            <a class="page-link" [routerLink]="['/board', thread.id]" [queryParams]="{ url: board.url, page: postList?.page + 1 }" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-            </a>
-        </li>
-    </ul>
-</nav>
+
+
+<cmm-post-list [page]="page" [ordering]="ordering" [parent]="post"></cmm-post-list>
+
+
