--- a/src/app/board/thread-list/thread-list.component.html
+++ b/src/app/board/thread-list/thread-list.component.html
@@ -22,22 +22,6 @@
         </tr>
     </tbody>
 </table>
-<nav aria-label="thread list navigation">
-    <ul class="pagination">
-        <li class="page-item" [class.disabled]="threadList?.page <= 1">
-            <a class="page-link" [routerLink]="['/board']" [queryParams]="{ url: board.url, page: threadList?.page - 1 }" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-            </a>
-        </li>
-        <li class="page-item" *ngFor="let i of threadList?.pages" [class.active]="i === threadList?.page">
-            <a class="page-link" [routerLink]="['/board']" [queryParams]="{ url: board.url, page: i }">{{ i }}</a>
-        </li>
-        <li class="page-item" [class.disabled]="threadList?.page >= threadList?.numberOfPages">
-            <a class="page-link" [routerLink]="['/board']" [queryParams]="{ url: board.url, page: threadList?.page + 1 }" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-            </a>
-        </li>
-    </ul>
-</nav>
+<cmm-pagination *ngIf="threadList" [partialList]="threadList"
+                pageQueryParamName="page">
+</cmm-pagination>
