--- a/src/app/board/post/post.component.html
+++ b/src/app/board/post/post.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex flex-row">
         <div class="post-sidebar">
             <cmm-user-label [user]="post.creator"
-                            [date]="post.modified">
+                            [date]="post.created">
             </cmm-user-label>
         </div>
         <div class="d-flex flex-column justify-content-between w-100">
