--- a/src/app/board/thread-detail/thread-detail.component.html
+++ b/src/app/board/thread-detail/thread-detail.component.html
@@ -3,7 +3,8 @@
 <cmm-post [post]="post"
           [title]="thread?.title"
           [externalChildHandling]="true"
-          (create)="childPostCreated($event)">
+          (create)="childPostCreated($event)"
+          (remove)="postRemoved($event)">
 </cmm-post>
 <hr>
 
