--- a/src/styles.less
+++ b/src/styles.less
@@ -12,6 +12,9 @@ html, body {
 
 .material-icons {
     font-size: 1.5rem;
+    &.small {
+        font-size: 1rem;
+    }
 }
 
 .no-border-button {
@@ -64,4 +67,9 @@ html, body {
 .btn-link {
     cursor: pointer;
     padding: 0;
+}
+
+
+.text-light {
+    color: #ccc;
 }
